--- a/projects/Scrub_Dispenser/scrub-dispenser.html
+++ b/projects/Scrub_Dispenser/scrub-dispenser.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scrub Dispenser Project</title>
-  <link rel="stylesheet" href="../../style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Non-Contact Scrub Dispenser</title>
+  <link rel="stylesheet" href="../../style.css" />
 </head>
 
 <body>
 
-  <section class="section container project-detail">
+  <main class="section container project-detail">
 
-    <h1>Non-Contact Scrub Dispensing System</h1>
-    <p class="project-meta">IEEE EMBS Internship • BCMCH Thiruvalla</p>
+    <h1 class="project-title">Non-Contact Scrub Dispensing System</h1>
+    <p class="project-meta">Healthcare • IR Sensing • Internship</p>
 
     <p class="project-desc">
-      This project was developed during my 2nd-year summer internship at BCMCH Thiruvalla under IEEE EMBS.
-      The goal was to design a low-cost, non-contact scrub dispensing system using IR sensing and a
-      peristaltic pump. The system eliminates contamination and prevents clogging, while avoiding
-      expensive electronics — making it suitable for high-usage clinical environments.
+      Developed as part of my 2nd-year summer internship at BCMCH Thiruvalla under IEEE EMBS.
+      This system uses IR-based non-contact sensing and a peristaltic pump to dispense scrub fluid
+      without contamination, clogging, or expensive electronics. The design includes a
+      custom PCB, 3D-printed enclosure, and screw-mount bottle interface suitable for hospital use.
     </p>
 
     <h2>Key Features</h2>
     <ul class="project-list">
-      <li>IR-based proximity detection for touch-free dispensing</li>
-      <li>Peristaltic pump to avoid fluid backflow & clogging</li>
-      <li>Low-cost analog control (no microcontroller required)</li>
-      <li>Custom PCB with comparator-based control</li>
-      <li>3D-printed enclosure with screw-on fluid bottle mount</li>
-      <li>Designed for medical scrub fluid usage in hospitals</li>
+      <li>Touch-free IR sensing for hygienic dispensing</li>
+      <li>Peristaltic pump to prevent backflow and clogging</li>
+      <li>Low-cost analog electronics (no microcontroller required)</li>
+      <li>Custom comparator-based control PCB</li>
+      <li>3D-printed enclosure with wall-mount system</li>
+      <li>Designed specifically for clinical scrub fluid bottles</li>
     </ul>
 
     <h2>Schematic</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-schematic.png" class="proj-img" alt="Schematic">
+    <img src="../../assets/scrub-schematic.jpg" class="proj-img" alt="Scrub System Schematic" />
 
     <h2>PCB Layout</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-layout.png" class="proj-img" alt="PCB layout">
+    <img src="../../assets/scrub-layout.jpg" class="proj-img" alt="Scrub System PCB Layout" />
 
-    <h2>3D Enclosure</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-3d.jpg" class="proj-img" alt="3D render">
+    <h2>3D Model</h2>
+    <img src="../../assets/scrub-3d.jpg" class="proj-img" alt="Scrub System CAD Model" />
 
     <h2>Deployed System</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-thumb.jpg" class="proj-img" alt="Deployed System">
+    <img src="../../assets/scrub-thumb.jpg" class="proj-img" alt="Installed Scrub Dispenser" />
 
-    <a href="../../index.html" class="btn-primary" style="margin-top: 20px;">← Back to Portfolio</a>
+    <a href="../../index.html" class="btn-primary" style="margin-top: 20px;">
+      ← Back to Portfolio
+    </a>
 
-  </section>
+  </main>
 
 </body>
 </html>
