--- a/projects/Scrub_Dispenser/scrub-dispenser.html
+++ b/projects/Scrub_Dispenser/scrub-dispenser.html
@@ -32,16 +32,16 @@
     </ul>
 
     <h2>Schematic</h2>
-    <img src="../../assets/scrub-schematic.jpg" class="proj-img" alt="Scrub System Schematic" />
+    <img src="../../assets/Scrub_Dispensor/scrub-schematic.jpg" class="proj-img" alt="Scrub System Schematic" />
 
     <h2>PCB Layout</h2>
-    <img src="../../assets/scrub-layout.jpg" class="proj-img" alt="Scrub System PCB Layout" />
+    <img src="../../assets/Scrub_Dispensor/scrub-layout.jpg" class="proj-img" alt="Scrub System PCB Layout" />
 
     <h2>3D Model</h2>
-    <img src="../../assets/scrub-3d.jpg" class="proj-img" alt="Scrub System CAD Model" />
+    <img src="../../assets/Scrub_Dispensor/scrub-3d.jpg" class="proj-img" alt="Scrub System CAD Model" />
 
     <h2>Deployed System</h2>
-    <img src="../../assets/scrub-thumb.jpg" class="proj-img" alt="Installed Scrub Dispenser" />
+    <img src="../../assets/Scrub_Dispensor/scrub-thumb.jpg" class="proj-img" alt="Installed Scrub Dispenser" />
 
     <a href="../../index.html" class="btn-primary" style="margin-top: 20px;">
       ← Back to Portfolio
