--- a/projects/Scrub_Dispenser/scrub-dispenser.html
+++ b/projects/Scrub_Dispenser/scrub-dispenser.html
@@ -32,10 +32,10 @@
     </ul>
 
     <h2>Schematic</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-schematic.jpg" class="proj-img" alt="Scrub System Schematic" />
+    <img src="../../assets/Scrub_Dispensor/scrub-schematic.png" class="proj-img" alt="Scrub System Schematic" />
 
     <h2>PCB Layout</h2>
-    <img src="../../assets/Scrub_Dispensor/scrub-layout.jpg" class="proj-img" alt="Scrub System PCB Layout" />
+    <img src="../../assets/Scrub_Dispensor/scrub-layout.png" class="proj-img" alt="Scrub System PCB Layout" />
 
     <h2>3D Model</h2>
     <img src="../../assets/Scrub_Dispensor/scrub-3d.jpg" class="proj-img" alt="Scrub System CAD Model" />
