--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <!-- PROJECT 3 -->
 <article class="project-card">
 
-  <img src="assets/Scrub_Dispensor/scrub-3d" alt="Non-contact scrub dispenser" class="project-thumb">
+  <img src="assets/Scrub_Dispensor/scrub-3d.jpg" alt="Non-contact scrub dispenser" class="project-thumb">
 
   <div class="project-content">
     <h3>Non-Contact Scrub Dispensing System</h3>
@@ -323,6 +323,7 @@
 
 </body>
 </html>
+
 
 
 
