--- a/index.html
+++ b/index.html
@@ -289,7 +289,21 @@
   </div>
 
 </article>
+<!-- PROJECT 4-->
+<article class="project-card">
+  <img src="assets/iv-drip/iv-thumb.jpg" class="project-thumb" alt="IV Drip Monitoring System Thumbnail">
 
+  <div class="project-content">
+    <h3>IV Drip Monitoring System</h3>
+    <p class="project-meta">Healthcare • Arduino • Prototype</p>
+
+    <p class="project-short">
+      Non-invasive IV drip monitoring using optical sensing, real-time alerts, and a custom 3D-printed enclosure for clinical usability.
+    </p>
+
+    <a href="projects/IV_Drip/iv-drip.html" class="project-link">View project →</a>
+  </div>
+</article>
 
 
 <section id="contact" class="section container">
@@ -323,6 +337,7 @@
 
 </body>
 </html>
+
 
 
 
