--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Navya Deena Rojin - Embedded Systems Engineering</title>
-
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
@@ -28,36 +27,32 @@
   <main id="home">
 
     <!-- HERO -->
-  <section class="hero-section container">
-  <div class="hero-text-block">
-    <p class="hero-tag">Embedded Systems</p>
-    <h1>Hi, I'm Navya Deena Rojin</h1>
-    <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
-    <p class="hero-desc">
-      I design and build electronics from custom ESP32 boards and sensor systems.
-    </p>
+    <section class="hero-section container">
+      <div class="hero-text-block">
+        <p class="hero-tag">Embedded Systems</p>
+        <h1>Hi, I'm Navya Deena Rojin</h1>
+        <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
+        <p class="hero-desc">
+          I design and build electronics from custom ESP32 boards and sensor systems.
+        </p>
+        <div class="hero-actions">
+          <a href="#projects" class="btn-primary">View my projects</a>
+          <a href="#contact" class="btn-outline">Let's collaborate</a>
+        </div>
+      </div>
+    </section>
 
-    <div class="hero-actions">
-      <a href="#projects" class="btn-primary">View my projects</a>
-      <a href="#contact" class="btn-outline">Let’s collaborate</a>
-    </div>
-  </div>
-</section>
-
-
-<section id="about" class="section container">
-  <h2 class="section-title">About Me</h2>
-
-  <div class="about-card">
-    <p>
-      I’m an Electronics & Communication Engineering undergraduate focused on
-      embedded systems, PCB design, and healthcare electronics. I enjoy taking
-      ideas from a rough sketch to working prototypes - schematics, layout,
-      firmware, and mechanical design.
-    </p>
-  </div>
-</section>
-
+    <section id="about" class="section container">
+      <h2 class="section-title">About Me</h2>
+      <div class="about-card">
+        <p>
+          I'm an Electronics & Communication Engineering undergraduate focused on
+          embedded systems, PCB design, and healthcare electronics. I enjoy taking
+          ideas from a rough sketch to working prototypes - schematics, layout,
+          firmware, and mechanical design.
+        </p>
+      </div>
+    </section>
 
     <!-- WHAT I DO -->
     <section class="section container">
@@ -79,133 +74,128 @@
         </div>
       </div>
     </section>
-    
+
     <!--SKILLS-->
-<section id="skills" class="section container">
-  <h2 class="section-title">Technical Skills</h2>
+    <section id="skills" class="section container">
+      <h2 class="section-title">Technical Skills</h2>
+      <div class="skill-card-grid">
+        <!-- Programming -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-code"></i></div>
+          <h3>Programming</h3>
+          <div class="skill-item">
+            <span>C / C++</span>
+            <div class="bar"><span style="width: 65%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Embedded C</span>
+            <div class="bar"><span style="width: 70%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Python</span>
+            <div class="bar"><span style="width: 85%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Verilog</span>
+            <div class="bar"><span style="width: 50%"></span></div>
+          </div>
+        </div>
 
-  <div class="skill-card-grid">
+        <!-- Microcontrollers -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-microchip"></i></div>
+          <h3>Microcontrollers</h3>
+          <div class="skill-item">
+            <span>ESP32</span>
+            <div class="bar"><span style="width: 85%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>STM32</span>
+            <div class="bar"><span style="width: 50%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Arduino</span>
+            <div class="bar"><span style="width: 95%"></span></div>
+          </div>
+        </div>
 
-    <!-- Programming -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-code"></i></div>
-      <h3>Programming</h3>
-      <div class="skill-item">
-        <span>C / C++</span>
-        <div class="bar"><span style="width: 65%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Embedded C</span>
-        <div class="bar"><span style="width: 70%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Python</span>
-        <div class="bar"><span style="width: 85%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Verilog</span>
-        <div class="bar"><span style="width: 50%"></span></div>
-      </div>
-    </div>
+        <!-- Embedded Systems -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-wave-square"></i></div>
+          <h3>Embedded Systems</h3>
+          <div class="skill-item">
+            <span>Sensor Interfacing</span>
+            <div class="bar"><span style="width: 90%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Communication Protocols</span>
+            <div class="bar"><span style="width: 80%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Debugging</span>
+            <div class="bar"><span style="width: 75%"></span></div>
+          </div>
+        </div>
 
-    <!-- Microcontrollers -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-microchip"></i></div>
-      <h3>Microcontrollers</h3>
-      <div class="skill-item">
-        <span>ESP32</span>
-        <div class="bar"><span style="width: 85%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>STM32</span>
-        <div class="bar"><span style="width: 50%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Arduino</span>
-        <div class="bar"><span style="width: 95%"></span></div>
-      </div>
-    </div>
+        <!-- PCB Design -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-layer-group"></i></div>
+          <h3>PCB Design</h3>
+          <div class="skill-item">
+            <span>EasyEDA</span>
+            <div class="bar"><span style="width: 95%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>KiCad</span>
+            <div class="bar"><span style="width: 70%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Cadence</span>
+            <div class="bar"><span style="width: 40%"></span></div>
+          </div>
+        </div>
 
-    <!-- Embedded Systems -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-wave-square"></i></div>
-      <h3>Embedded Systems</h3>
-      <div class="skill-item">
-        <span>Sensor Interfacing</span>
-        <div class="bar"><span style="width: 90%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Communication Protocols</span>
-        <div class="bar"><span style="width: 80%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Debugging</span>
-        <div class="bar"><span style="width: 75%"></span></div>
-      </div>
-    </div>
+        <!-- 3D Design -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-cube"></i></div>
+          <h3>3D Design & Prototyping</h3>
+          <div class="skill-item">
+            <span>Autodesk Fusion</span>
+            <div class="bar"><span style="width: 90%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>3D Printing Optimization</span>
+            <div class="bar"><span style="width: 75%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Enclosure Design</span>
+            <div class="bar"><span style="width: 85%"></span></div>
+          </div>
+        </div>
 
-    <!-- PCB Design -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-layer-group"></i></div>
-      <h3>PCB Design</h3>
-      <div class="skill-item">
-        <span>EasyEDA</span>
-        <div class="bar"><span style="width: 95%"></span></div>
+        <!-- Tools -->
+        <div class="skill-card">
+          <div class="skill-icon"><i class="fa-solid fa-chart-line"></i></div>
+          <h3>Tools & Simulation</h3>
+          <div class="skill-item">
+            <span>Vivado</span>
+            <div class="bar"><span style="width: 75%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>Xcelium</span>
+            <div class="bar"><span style="width: 30%"></span></div>
+          </div>
+          <div class="skill-item">
+            <span>LTSpice</span>
+            <div class="bar"><span style="width: 90%"></span></div>
+          </div>
+        </div>
       </div>
-      <div class="skill-item">
-        <span>KiCad</span>
-        <div class="bar"><span style="width: 70%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Cadence</span>
-        <div class="bar"><span style="width: 40%"></span></div>
-      </div>
-    </div>
-
-    <!-- 3D Design -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-cube"></i></div>
-      <h3>3D Design & Prototyping</h3>
-      <div class="skill-item">
-        <span>Autodesk Fusion</span>
-        <div class="bar"><span style="width: 90%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>3D Printing Optimization</span>
-        <div class="bar"><span style="width: 75%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Enclosure Design</span>
-        <div class="bar"><span style="width: 85%"></span></div>
-      </div>
-    </div>
-
-    <!-- Tools -->
-    <div class="skill-card">
-      <div class="skill-icon"><i class="fa-solid fa-chart-line"></i></div>
-      <h3>Tools & Simulation</h3>
-      <div class="skill-item">
-        <span>Vivado</span>
-        <div class="bar"><span style="width: 75%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>Xcelium</span>
-        <div class="bar"><span style="width: 30%"></span></div>
-      </div>
-      <div class="skill-item">
-        <span>LTSpice</span>
-        <div class="bar"><span style="width: 90%"></span></div>
-      </div>
-    </div>
-
-  </div>
-</section>
-
+    </section>
 
     <!-- EDUCATION -->
     <section id="education" class="section container">
       <h2 class="section-title">Education</h2>
-
       <div class="timeline">
         <div class="timeline-item">
           <div class="timeline-dot"></div>
@@ -221,112 +211,92 @@
       </div>
     </section>
 
-  <section id="projects" class="section container">
-    
-  <h2 class="section-title">Projects</h2>
+    <!-- Fixed projects section - ALL 4 project cards are now inside the single .projects-grid container -->
+    <section id="projects" class="section container">
+      <h2 class="section-title">Projects</h2>
 
-  <div class="projects-grid">
+      <div class="projects-grid">
 
-    <!-- PROJECT 1 -->
-    <article class="project-card">
+        <!-- PROJECT 1 -->
+        <article class="project-card">
+          <img src="assets/esp32-devboard/board-3d.png" alt="ESP32 Project" class="project-thumb">
+          <div class="project-content">
+            <h3>Custom ESP32-S3 Dev Board</h3>
+            <p class="project-meta">Embedded • PCB • IoT</p>
+            <p class="project-short">
+              Custom ESP32-S3 board with USB-C, battery charging, SD card, and IMU — built for rapid prototyping.
+            </p>
+            <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="project-link">
+              View project →
+            </a>
+          </div>
+        </article>
 
-      <img src="assets/esp32-devboard/board-3d.png" alt="ESP32 Project" class="project-thumb">
+        <!-- PROJECT 2 -->
+        <article class="project-card">
+          <img src="assets/tremosense/board-3d.png" alt="TremoSense" class="project-thumb">
+          <div class="project-content">
+            <h3>TremoSense</h3>
+            <p class="project-meta">Healthcare • Wearable</p>
+            <p class="project-short">
+              Wearable tremor-tracking system using IMU data to analyze Parkinson's medication response.
+            </p>
+            <a href="projects/TremoSense/tremosense.html" class="project-link">
+              View project →
+            </a>
+          </div>
+        </article>
 
-      <div class="project-content">
-        <h3>Custom ESP32-S3 Dev Board</h3>
-        <p class="project-meta">Embedded • PCB • IoT</p>
+        <!-- PROJECT 3 - moved inside grid -->
+        <article class="project-card">
+          <img src="assets/Scrub_Dispensor/scrub-3d.jpg" alt="Non-contact scrub dispenser" class="project-thumb">
+          <div class="project-content">
+            <h3>Non-Contact Scrub Dispensing System</h3>
+            <p class="project-meta">Healthcare • IR Sensing • Internship</p>
+            <p class="project-short">
+              IR-based automatic scrub dispenser using a peristaltic pump to eliminate contamination and bottle clogging - built during my 2nd-year summer internship at BCMCH under IEEE EMBS.
+            </p>
+            <a href="projects/Scrub_Dispenser/scrub-dispenser.html" class="project-link">
+              View project →
+            </a>
+          </div>
+        </article>
 
-        <p class="project-short">
-          Custom ESP32-S3 board with USB-C, battery charging, SD card, and IMU — built for rapid prototyping.
-        </p>
+        <!-- PROJECT 4 - moved inside grid -->
+        <article class="project-card">
+          <img src="assets/iv-drip/iv-thumb.jpg" class="project-thumb" alt="IV Drip Monitoring System Thumbnail">
+          <div class="project-content">
+            <h3>IV Drip Monitoring System</h3>
+            <p class="project-meta">Healthcare • Arduino • Prototype</p>
+            <p class="project-short">
+              Non-invasive IV drip monitoring using optical sensing, real-time alerts, and a custom 3D-printed enclosure for clinical usability.
+            </p>
+            <a href="projects/IV_Drip/iv-drip.html" class="project-link">View project →</a>
+          </div>
+        </article>
 
-        <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="project-link">
-          View project →
-        </a>
       </div>
+    </section>
 
-    </article>
-
-    <!-- PROJECT 2 -->
-    <article class="project-card">
-
-      <img src="assets/tremosense/board-3d.png" alt="TremoSense" class="project-thumb">
-
-      <div class="project-content">
-        <h3>TremoSense</h3>
-        <p class="project-meta">Healthcare • Wearable</p>
-
-        <p class="project-short">
-          Wearable tremor-tracking system using IMU data to analyze Parkinson’s medication response.
+    <section id="contact" class="section container">
+      <h2 class="section-title">Get In Touch</h2>
+      <div class="contact-card">
+        <p>
+          Have an idea around embedded systems or healthcare electronics project? I'd love to talk.
         </p>
-
-        <a href="projects/TremoSense/tremosense.html" class="project-link">
-          View project →
-        </a>
+        <div class="contact-actions">
+          <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
+            Email Me
+          </a>
+          <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
+            GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank" rel="noreferrer" class="btn-link">
+            LinkedIn
+          </a>
+        </div>
       </div>
-
-    </article>
-<!-- PROJECT 3 -->
-<article class="project-card">
-
-  <img src="assets/Scrub_Dispensor/scrub-3d.jpg" alt="Non-contact scrub dispenser" class="project-thumb">
-
-  <div class="project-content">
-    <h3>Non-Contact Scrub Dispensing System</h3>
-    <p class="project-meta">Healthcare • IR Sensing • Internship</p>
-
-    <p class="project-short">
-      IR-based automatic scrub dispenser using a peristaltic pump to eliminate contamination and bottle clogging - built during my 2nd-year summer internship at BCMCH under IEEE EMBS.
-    </p>
-
-    <a href="projects/Scrub_Dispenser/scrub-dispenser.html" class="project-link">
-      View project →
-    </a>
-  </div>
-
-</article>
-<!-- PROJECT 4-->
-<article class="project-card">
-  <img src="assets/iv-drip/iv-thumb.jpg" class="project-thumb" alt="IV Drip Monitoring System Thumbnail">
-
-  <div class="project-content">
-    <h3>IV Drip Monitoring System</h3>
-    <p class="project-meta">Healthcare • Arduino • Prototype</p>
-
-    <p class="project-short">
-      Non-invasive IV drip monitoring using optical sensing, real-time alerts, and a custom 3D-printed enclosure for clinical usability.
-    </p>
-
-    <a href="projects/IV_Drip/iv-drip.html" class="project-link">View project →</a>
-  </div>
-</article>
-
-  </div>
-</section>
-
-
-<section id="contact" class="section container">
-  <h2 class="section-title">Get In Touch</h2>
-
-  <div class="contact-card">
-    <p>
-      Have an idea around embedded systems or healthcare electronics project? I’d love to talk.
-    </p>
-
-    <div class="contact-actions">
-      <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
-        Email Me
-      </a>
-      <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
-        GitHub
-      </a>
-      <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank" rel="noreferrer" class="btn-link">
-        LinkedIn
-      </a>
-    </div>
-  </div>
-</section>
-
+    </section>
 
   </main>
 
@@ -336,24 +306,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
