--- a/projects/IV_Drip/iv-drip.html
+++ b/projects/IV_Drip/iv-drip.html
@@ -66,7 +66,7 @@
 
     <!-- PCB / PROTOTYPE -->
     <section class="project-section">
-      <h2>Electronics / Prototype</h2>
+      <h2>PCB Layout</h2>
       <a href="../../assets/iv-drip/iv-prototype.jpg" target="_blank">
         <img class="image-view" src="../../assets/iv-drip/iv-prototype.jpg" alt="IV Drip Prototype">
       </a>
