--- a/projects/IV_Drip/iv-drip.html
+++ b/projects/IV_Drip/iv-drip.html
@@ -64,11 +64,11 @@
       </a>
     </section>
 
-    <!-- PCB / PROTOTYPE -->
+    <!-- PCB -->
     <section class="project-section">
       <h2>PCB Layout</h2>
       <a href="../../assets/iv-drip/iv-prototype.jpg" target="_blank">
-        <img class="image-view" src="../../assets/iv-drip/iv-prototype.jpg" alt="IV Drip Prototype">
+        <img class="image-view" src="../../assets/iv-drip/iv-pcb.jpg" alt="IV Drip Prototype">
       </a>
     </section>
 
