--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
         <!-- PROJECT 4 - moved inside grid -->
         <article class="project-card">
-          <img src="assets/iv-drip/iv-thumb.jpg" class="project-thumb" alt="IV Drip Monitoring System Thumbnail">
+          <img src="assets/iv-drip/iv-3d.jpg" class="project-thumb" alt="IV Drip Monitoring System Thumbnail">
           <div class="project-content">
             <h3>IV Drip Monitoring System</h3>
             <p class="project-meta">Healthcare • Arduino • Prototype</p>
@@ -306,3 +306,4 @@
 
 </body>
 </html>
+
