--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
         <!-- PROJECT 3 - moved inside grid -->
         <article class="project-card">
-          <img src="assets/Scrub_Dispensor/scrub-3d.jpg" alt="Non-contact scrub dispenser" class="project-thumb">
+          <img src="assets/Scrub_Dispensor/scrub-layout.png" alt="Non-contact scrub dispenser" class="project-thumb">
           <div class="project-content">
             <h3>Non-Contact Scrub Dispensing System</h3>
             <p class="project-meta">Healthcare • IR Sensing • Internship</p>
@@ -306,4 +306,5 @@
 
 </body>
 </html>
+
 
