--- a/projects/IV_Drip/iv-drip.html
+++ b/projects/IV_Drip/iv-drip.html
@@ -67,8 +67,15 @@
     <!-- PCB -->
     <section class="project-section">
       <h2>PCB Layout</h2>
-      <a href="../../assets/iv-drip/iv-prototype.jpg" target="_blank">
+      <a href="../../assets/iv-drip/iv-pcb.jpg" target="_blank">
         <img class="image-view" src="../../assets/iv-drip/iv-pcb.jpg" alt="IV Drip Prototype">
+      </a>
+      
+    </section>
+        <section class="project-section">
+      <h2>PCB 3D Model</h2>
+      <a href="../../assets/iv-drip/iv-pcb-3d.jpg" target="_blank">
+        <img class="image-view" src="../../assets/iv-drip/iv-pcb-3d.jpg" alt="IV Drip Prototype">
       </a>
     </section>
 
