--- a/index.html
+++ b/index.html
@@ -277,6 +277,32 @@
 
       </div>
     </section>
+    <section id="ongoing-projects" class="section container">
+  <h2 class="section-title">Ongoing Projects</h2>
+
+  <div class="ongoing-grid">
+
+    <article class="ongoing-card">
+      <h3>Functional Electrical Stimulator (FES)</h3>
+      <p class="project-meta">Biomedical • Hardware</p>
+      <p class="ongoing-desc">
+        Low-cost FES device for muscle stimulation using controlled pulse waveforms.
+        Focused on safe hardware design, isolation, and adjustable output parameters.
+      </p>
+    </article>
+
+    <article class="ongoing-card">
+      <h3>Gait Phase Detection System</h3>
+      <p class="project-meta">Sensors • Motion Analysis</p>
+      <p class="ongoing-desc">
+        Motion-based system for identifying gait phases for rehabilitation support.
+        Designed to interface with assistive or closed-loop stimulation systems.
+      </p>
+    </article>
+
+  </div>
+</section>
+
 
     <section id="contact" class="section container">
       <h2 class="section-title">Get In Touch</h2>
@@ -306,5 +332,6 @@
 
 </body>
 </html>
+
 
 
