--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Navya Deena Rojin - Embedded Systems Engineering</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script defer src="script.js"></script>
 </head>
 <body>
@@ -277,27 +278,50 @@
 
       </div>
     </section>
+<!--Ongoing Projects-->
     <section id="ongoing-projects" class="section container">
   <h2 class="section-title">Ongoing Projects</h2>
 
   <div class="ongoing-grid">
 
+    <!-- FES -->
     <article class="ongoing-card">
-      <h3>Functional Electrical Stimulator (FES)</h3>
+      <div class="ongoing-header">
+        <i class="fa-solid fa-bolt icon"></i>
+        <h3>Functional Electrical Stimulator (FES)</h3>
+      </div>
+
       <p class="project-meta">Biomedical • Hardware</p>
+
       <p class="ongoing-desc">
-        Low-cost FES device for muscle stimulation using controlled pulse waveforms.
-        Focused on safe hardware design, isolation, and adjustable output parameters.
+        Low-cost FES device for muscle stimulation using controlled pulse waveforms with
+        adjustable parameters and isolation circuitry.
       </p>
+
+      <div class="progress">
+        <div class="progress-bar" style="width: 60%;"></div>
+      </div>
+      <p class="progress-label">60% Complete</p>
     </article>
 
+    <!-- Gait System -->
     <article class="ongoing-card">
-      <h3>Gait Phase Detection System</h3>
+      <div class="ongoing-header">
+        <i class="fa-solid fa-person-running icon"></i>
+        <h3>Gait Phase Detection System</h3>
+      </div>
+
       <p class="project-meta">Sensors • Motion Analysis</p>
+
       <p class="ongoing-desc">
-        Motion-based system for identifying gait phases for rehabilitation support.
-        Designed to interface with assistive or closed-loop stimulation systems.
+        Sensor-based system for detecting gait phases for rehabilitation and assistive
+        technology integration.
       </p>
+
+      <div class="progress">
+        <div class="progress-bar" style="width: 45%;"></div>
+      </div>
+      <p class="progress-label">45% Complete</p>
     </article>
 
   </div>
@@ -332,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
