--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navya Deena Rojin - Embedded Systems Engineering</title>
+  <title>Navya Deena Rojin - Aspiring Embedded Systems Engineer</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script defer src="script.js"></script>
@@ -34,7 +34,7 @@
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
-          I design and build electronics from custom ESP32 boards and sensor systems.
+          I design and build electronics from custom ESP32 boards to integrated sensor systems.
         </p>
         <div class="hero-actions">
           <a href="#projects" class="btn-primary">View my projects</a>
@@ -356,6 +356,7 @@
 
 </body>
 </html>
+
 
 
 
